--- a/api/settings.json
+++ b/api/settings.json
@@ -1,1 +1,1 @@
-{"name": "Player", "skin": 1, "music": 100, "sfx": 100, "scores": [["Player", 3330]]}
+{"name": "void", "skin": 1, "music": 51, "sfx": 54, "scores": [["Player", 3330]]}
